Fixed height of landing page, as it would leave a big gap between the next section once resized to a smaller window.

--- a/Website/Main_page.css
+++ b/Website/Main_page.css
@@ -105,7 +105,7 @@ body{
 }
 
 .Landing_Page {
-    max-height: 100rem;
+    max-height: 70rem;
     overflow: hidden;
     position: relative;
     text-align: center;
